--- a/prog.md.html
+++ b/prog.md.html
@@ -6,10 +6,8 @@
 
 <meta name="keywords" content="*memo_prog*">
 
-<meta name="keywords" content="*memo_c*">
-<meta name="keywords" content="*memo_c++*">
-<meta name="keywords" content="*memo_cxx*">
-<meta name="keywords" content="*memo_cpp*">
+<meta name="keywords" content="*memo_ref.c*">
+<meta name="keywords" content="*memo_ref.cpp*">
 C++
 =======================================================
 
@@ -217,25 +215,25 @@ template<class For, class For2, class BinPred>
 For search(For first, For last, For2 first2, For2 last2, BinPred p);
 ~~~
 
-<meta name="keywords" content="*memo_imgui*">
+<meta name="keywords" content="*memo_ref.imgui*">
 imgui
 =======================================================
 ## demo
 - ShowDemoWindow()
 
-<meta name="keywords" content="*memo_opengl*">
+<meta name="keywords" content="*memo_ref.opengl*">
 opengl
 =======================================================
 
-<meta name="keywords" content="*memo_glsl*">
+<meta name="keywords" content="*memo_ref.glsl*">
 glsl
 =======================================================
 
-<meta name="keywords" content="*memo_glm*">
+<meta name="keywords" content="*memo_ref.glm*">
 glm
 =======================================================
 
-<meta name="keywords" content="*memo_eigen*">
+<meta name="keywords" content="*memo_ref.eigen*">
 Eigen
 =======================================================
 ## the order of multiplying matrix
@@ -257,7 +255,7 @@ typedef Matrix<float, 3, 1> Vector3f;
 typedef Matrix<float, 1, 3> RowVector3f;
 ~~~
 
-<meta name="keywords" content="*memo_opencv*">
+<meta name="keywords" content="*memo_ref.opencv*">
 OpenCV
 =======================================================
 ## Type
