--- a/os.md.html
+++ b/os.md.html
@@ -439,6 +439,7 @@ pkg install termux-exec
 ## Installed
 ~~~
 pkg install git vim ctags clang cmake tmux
+pkg install diffutils
 ~~~
 
 <meta name="keywords" content="*memo_misc*">
