--- a/dev.md.html
+++ b/dev.md.html
@@ -611,17 +611,18 @@ Visual Studio Code
 Visual Studio
 =======================================================
 ## plugin
-Tool > Extension
+- Tool > Extension
+  - VsVim
 
-- VsVim
+## tab
+- Tool > Options > Text Editor > C/C++ > Tab
 
 <meta name="keywords" content="*memo_android_studio*">
 Android Studio
 =======================================================
 ## plugin
-Settings > Plugins > Install JetBrains plugin...
-
-- IdeaVim
+- Settings > Plugins > Install JetBrains plugin...
+  - IdeaVim
 
 ## build
 ~~~
