--- a/links.md.html
+++ b/links.md.html
@@ -85,6 +85,7 @@ Develop
 ## Vim
 - [vim](https://www.vim.org/)
   | [vim-jp](http://vim-jp.org/)
+- [vimcast.org](http://vimcasts.org/)
 - [VimAwesome](https://vimawesome.com/)
 - Plugin manager
   - [vim-plug](https://github.com/junegunn/vim-plug)
@@ -164,6 +165,9 @@ Develop
 ## Termux
 - [termux](https://termux.com/)
 - [The Termux Wiki](https://wiki.termux.com/wiki/Main_Page)
+
+## UserLAnd
+- [UserLAnd](https://userland.tech/)
 
 </div>
 
