--- a/prog.md.html
+++ b/prog.md.html
@@ -215,18 +215,12 @@ template<class For, class For2, class BinPred>
 For search(For first, For last, For2 first2, For2 last2, BinPred p);
 ~~~
 
-<meta name="keywords" content="*memo_ref.imgui*">
-imgui
-=======================================================
-## demo
-- ShowDemoWindow()
-
 <meta name="keywords" content="*memo_ref.opengl*">
-opengl
+OpenGL
 =======================================================
 
 <meta name="keywords" content="*memo_ref.glsl*">
-glsl
+GLSL
 =======================================================
 
 <meta name="keywords" content="*memo_ref.glm*">
@@ -263,6 +257,12 @@ OpenCV
 ---------|---------------------------
 CV_8UC1  | 8bit unsigned 1 channel
 CV_32FC2 | 32bit float 2 channel
+
+<meta name="keywords" content="*memo_ref.imgui*">
+imgui
+=======================================================
+## demo
+- ShowDemoWindow()
 
 <meta name="keywords" content="*memo_python*">
 Python
