--- a/os.md.html
+++ b/os.md.html
@@ -453,6 +453,7 @@ pkg install vim-python
 pkg install ncurses-utils   # tput
 pkg install util-linux      # column
 pkg install openssh
+pkg install iconv
 ~~~
 
 ## sshd
