--- a/os.md.html
+++ b/os.md.html
@@ -268,8 +268,9 @@ XferCommand = /c/Windows/System32/curl -C - -f %u > %o
 Option              | 説明
 --------------------|-----------------
 -S -h               | help
--Syu                | update database
--Su                 | update
+-Syu                | update database & update packages
+-Sy                 | update database
+-Su                 | update packages
 -S package          | install
 -R package          | uninstall
 -Sg [package group] | print package group
