--- a/links.md.html
+++ b/links.md.html
@@ -96,9 +96,11 @@ Develop
 - File manager
   - [nerdtree](https://github.com/scrooloose/nerdtree)
   - [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
+  - [ctrlp](https://github.com/ctrlpvim/ctrlp.vim)
 - Git
   - [vim-fugitive](https://github.com/tpope/vim-fugitive)
   - [vim-gitgutter](https://github.com/airblade/vim-gitgutter)
+  - [gv.vim](https://github.com/junegunn/gv.vim)
   - [agit](https://github.com/cohama/agit.vim)
 <!--
   - [gitv](https://github.com/gregsexton/gitv)
