--- a/dev.md.html
+++ b/dev.md.html
@@ -465,6 +465,7 @@ R                | reload the status buffer
 Command          | Description
 -----------------|---
 O                | diff in a new tab
+D                | diff in a new tab
 C-X              | :tabclose
 
 <meta name="keywords" content="*memo_vim.nerdtree*">
