--- a/links.md.html
+++ b/links.md.html
@@ -41,6 +41,11 @@ Links
 - [楽天市場]("http://www.rakuten.co.jp/")
 - [価格.com]("http://www.kakaku.com/")
 
+## Travel
+- [新幹線 空席案内](http://www.jr.cyberstation.ne.jp/vacancy/Vacancy.html)
+- [JR東日本](https://www.eki-net.com/top/index.html)
+- [JR西日本](https://www.jr-odekake.net/)
+
 ## News
 - [読売新聞](http://www.yomiuri.co.jp/)
 - [朝日新聞](http://www.asahi.com/)
