--- a/prog.md.html
+++ b/prog.md.html
@@ -35,6 +35,11 @@ tags:
 <meta name="keywords" content="*memo_cmake*">
 CMakeLists.txt
 =======================================================
+## 環境変数
+~~~
+set(VAR $ENV{VAR})
+~~~
+
 ## Unix Makefiles
 ~~~
 mkdir build
