--- a/soft.md.html
+++ b/soft.md.html
@@ -18,8 +18,8 @@ ImageMagick
 =======================================================
 ## resize
 ~~~
-convert -geometry {width}x{height} input_image output_image
-convert -geometry {width}          input_image output_image
+convert -geometry {width}x{height}! input_image output_image
+convert -geometry {width}           input_image output_image
 ~~~
 ## grayscale
 ~~~
